--- a/package.json
+++ b/package.json
@@ -11,7 +11,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "laravel-mix": "^5.0.7",
-    "webpack": "^5.3.0"
+    "cross-env": "^7.0.2",
+    "css-loader": "^5.0.0",
+    "cssnano": "^4.1.10",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^1.2.1",
+    "node-sass": "^4.14.1",
+    "path": "^0.12.7",
+    "postcss-loader": "^4.0.4",
+    "postcss-preset-env": "^6.7.0",
+    "sass-loader": "^10.0.4",
+    "style-loader": "^2.0.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
